# cnc_zerohour_stats

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  custom-postgresql.conf  docker-compose.yaml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  setup.cfg
zh/: admin.py  asgi.py  jazzmin_settings.py  models.py  settings.py  utils.py  wsgi.py
zh/fixtures/: superuser.json
zh/management/commands/: load_data.py
zh/migrations/: 0001_initial.py
